--- a/style.css
+++ b/style.css
@@ -15,17 +15,22 @@ input {
     width: 100%;
     height: 50px;
     border: 1px solid #5f9341;
+    margin-bottom: 4px;
 
 }
 
 button {
     background-color: #5f9341;
     color: white;
-    height: 40px;
-    width: 120px;
-    border: none;
+    padding: 10px 20px;
+    border: 1px solid #5f9341;
+    font-weight: bold;
 }
 
+#delete-btn {
+    color: #5f9341;
+    background-color: white;
+}
 ul {
     list-style: none;
     padding-left: 0;
